--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "njeforbi-bakery-ims",
+  "name": "njeforbi-ims",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,12 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@chakra-ui/react": "^3.15.1",
     "@emotion/react": "^11.14.0",
-    "@tailwindcss/cli": "^4.1.3",
+    "@emotion/styled": "^11.14.0",
+    "@mui/x-charts": "^7.28.0",
+    "@mui/x-date-pickers": "^8.0.0",
     "axios": "^1.8.4",
+    "dayjs": "^1.11.13",
+    "lucide-react": "^0.503.0",
     "next": "15.3.0",
+    "rc-progress": "^4.0.0",
     "react": "^19.0.0",
+    "react-circular-progressbar": "^2.2.0",
+    "react-datepicker": "^8.3.0",
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
@@ -25,7 +31,7 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.3.0",
-    "tailwindcss": "^4.1.3",
+    "tailwindcss": "^4",
     "typescript": "^5"
   }
 }
